[tool.poetry]
name = "semi-supervised-learning"
version = "0.1.0"
description = ""
authors = ["Author Anonymous <author@anonymous.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
echo = "semi_supervised_learning.main:echo"
